--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,5 +1,6 @@
 .Navbar {
     display: flex;
+    margin-right: 3.6%;
 }
 
 @font-face {
@@ -44,5 +45,4 @@
 .Nav-4 {
     align-content: center;
     padding-left: 16px;
-    padding-right: 16px;
 }
