Added contact button to Aboutme

--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,8 @@ body {
   justify-content: space-between;
   vertical-align: middle;
 }
+
+.Container-1 {
+  display: flex;
+  flex-direction: column;
+}
