Added marquee bar with tech icons

--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,9 @@ body {
   display: flex;
   flex-direction: column;
 }
+
+.Container-2 {
+  margin-top: 100px;
+  /* display: flex;
+  flex-direction: row; */
+}
