--- a/src/styles/Aboutme.css
+++ b/src/styles/Aboutme.css
@@ -1,6 +1,7 @@
 .Aboutme {
     margin-left: 3.6%;
     width: 500px;
+    height: auto;
 }
 
 @font-face {
@@ -38,7 +39,7 @@
     justify-content: center;
     background-color: #282C33;
     border: 1px solid #019DF4;
-    position: absolute;
+    position: relative;
 }
 
 .contact-button:hover {
