--- a/src/App.css
+++ b/src/App.css
@@ -20,19 +20,27 @@ body {
 }
 
 .Container-2 {
-  margin-top: 100px;
+  margin-top: 50px;
   /* display: flex;
   flex-direction: row; */
 }
 
 .Container-3 {
-  margin-top: 135px;
+  margin-top: 50px;
 }
 
 .Container-4 {
-  margin-top: 48px;
+  margin-top: 50px;
 }
 
 .Container-5 {
+  margin-top: 50px;
+}
+
+.Container-6 {
+  margin-top: 50px;
+}
+
+.Container-7 {
   margin-top: 100px;
 }
